--- a/App/Voltflow/Views/Account/Panels/PasswordResetPanel.axaml
+++ b/App/Voltflow/Views/Account/Panels/PasswordResetPanel.axaml
@@ -25,10 +25,10 @@
         <StackPanel Classes="sm-spacing" Orientation="Horizontal">
             <iconPacks:PackIconMaterialDesign
                 VerticalAlignment="Center"
-                Classes="size-sm color-gray"
+                Classes="size-sm"
                 IsVisible="True"
                 Kind="AlternateEmail" />
-            <TextBlock Classes="size-sm color-gray weight-bold" Text="Email" />
+            <TextBlock Classes="size-sm weight-bold" Text="Email" />
         </StackPanel>
 
         <Grid IsEnabled="{Binding !PasswordResetForm.SentToken}">
@@ -56,10 +56,10 @@
             <StackPanel Classes="sm-spacing" Orientation="Horizontal">
                 <iconPacks:PackIconMaterialDesign
                     VerticalAlignment="Center"
-                    Classes="size-sm color-gray"
+                    Classes="size-sm"
                     IsVisible="True"
                     Kind="Key" />
-                <TextBlock Classes="size-sm color-gray weight-bold" Text="Password Reset Token" />
+                <TextBlock Classes="size-sm weight-bold" Text="Password Reset Token" />
             </StackPanel>
             <TextBox Text="{Binding PasswordResetForm.Token}" Watermark="Enter received token here" />
         </StackPanel>
@@ -69,10 +69,10 @@
             <StackPanel Classes="sm-spacing" Orientation="Horizontal">
                 <iconPacks:PackIconMaterialDesign
                     VerticalAlignment="Center"
-                    Classes="size-sm color-gray"
+                    Classes="size-sm"
                     IsVisible="True"
                     Kind="Lock" />
-                <TextBlock Classes="size-sm color-gray weight-bold" Text="New Password" />
+                <TextBlock Classes="size-sm weight-bold" Text="New Password" />
             </StackPanel>
             <Grid>
                 <Grid.ColumnDefinitions>
