--- a/App/Voltflow/Views/Pages/Statistics/StatisticsView.axaml
+++ b/App/Voltflow/Views/Pages/Statistics/StatisticsView.axaml
@@ -16,7 +16,7 @@
 
     <ScrollViewer>
         <StackPanel
-            MaxWidth="256"
+            Width="256"
             HorizontalAlignment="Stretch"
             VerticalAlignment="Center">
 
