--- a/App/Voltflow/Views/Account/Panels/EmailVerificationPanel.axaml
+++ b/App/Voltflow/Views/Account/Panels/EmailVerificationPanel.axaml
@@ -25,10 +25,10 @@
         <StackPanel Classes="sm-spacing" Orientation="Horizontal">
             <iconPacks:PackIconMaterialDesign
                 VerticalAlignment="Center"
-                Classes="size-sm color-gray"
+                Classes="size-sm"
                 IsVisible="True"
                 Kind="Key" />
-            <TextBlock Classes="size-sm color-gray weight-bold" Text="Email Verification Token" />
+            <TextBlock Classes="size-sm weight-bold" Text="Email Verification Token" />
         </StackPanel>
         <TextBox Text="{Binding EmailVerificationForm.Token}" Watermark="Enter received token here" />
 
